# IntentSwap-Relay

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  docker-entrypoint.sh
backend/migrations/: 0001_init.sql
backend/src/: api.rs  db.rs  main.rs  models.rs  signature.rs
contracts/: Dockerfile  docker-entrypoint.sh  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ExecutionEngine.sol  FeeManager.sol  IntentFactory.sol  IntentManager.sol  IntentTypes.sol
frontend/: .env.example  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/components/: IntentForm.tsx  IntentList.tsx  WalletBar.tsx
frontend/src/lib/: api.ts  eip712.ts  wallet.ts
